# blender-scripts

./: LICENSE  Python.blend  README.md  op_align_bone_to_transform_orientation.py  pyproject.toml  test_move_cursor.py  test_object_info.py
